# libcbdetect

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  environment.yml  pyproject.toml
.github/workflows/: build.yml
include/libcbdetect/: board_energy.h  boards_from_corners.h  boards_from_cornres.h  chessboard_energy.h  chessboards_from_corners.h  config.h  create_correlation_patch.h  deltille_energy.h  deltille_from_corners.h  deltilles_from_corners.h  filter_board.h  filter_corners.h  filter_deltille.h  find_corners.h  find_modes_meanshift.h  get_image_patch.h  get_init_location.h  grow_board.h  grow_chessboard.h  grow_deltille.h  image_normalization_and_gradients.h  init_board.h  init_chessboard.h  init_deltille.h  non_maximum_suppression.h  plot_boards.h  plot_chessboards.h  plot_corners.h  plot_deltilles.h  polynomial_fit.h  refine_corners.h  score_corners.h  weight_mask.h
src/: CMakeLists.txt  example.cc
src/bindings/: cbdetect_py.cc
src/cbdetect_py/: __init__.py  cbdetect_py.pyi
src/libcbdetect/: CMakeLists.txt  board_energy.cc  boards_from_corners.cc  chessboard_energy.cc  chessboards_from_corners.cc  create_correlation_patch.cc  deltille_energy.cc  deltille_from_corners.cc  deltilles_from_corners.cc  filter_board.cc  filter_corners.cc  filter_deltille.cc  find_corners.cc  find_modes_meanshift.cc  get_image_patch.cc  get_init_location.cc  grow_board.cc  grow_chessboard.cc  grow_deltille.cc  image_normalization_and_gradients.cc  init_board.cc  init_chessboard.cc  init_deltille.cc  non_maximum_suppression.cc  plot_boards.cc  plot_chessboards.cc  plot_corners.cc  plot_deltilles.cc  polynomial_fit.cc  refine_corners.cc  score_corners.cc  weight_mask.cc
src/python/: libcbdetect.cc
tests/: test_libcbdetect.py
