[build-system]
requires = ["scikit_build_core[rich]", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "cbdetect_py"
version = "0.0.1"
description="Corner detector"
readme = "README.md"
authors = [
  # { name = "My Name", email = "me@email.com" },
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = ["numpy"]


[tool.scikit-build]
sdist.include = ["src/cbdetect_py.pyi"]
